# ubeacon_tag_driver

./: .gitignore  CMakeLists.txt  readme.md  ubeacon_tag.c  ubeacon_tag.h  ubeacon_tag_ble.h  ubeacon_tag_common.c  ubeacon_tag_common.h  ubeacon_tag_iic.h  ubeacon_tag_uart.c  ubeacon_tag_uart.h
app/: CMakeLists.txt  main.cpp  msg_handle.cpp  msg_handle.hpp  serial_port.cpp  serial_port.hpp
test/: CMakeLists.txt  test_ubeacon_tag.cpp
